mermaid/grammar/generated/MermaidC4Parser.py
# Generated from MermaidC4Parser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MermaidC4Parser ( Parser ):

    grammarFileName = "MermaidC4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'C4Context'", "'C4Container'", "'C4Component'", 
                     "'C4Dynamic'", "'C4Deployment'", "'Person'", "'Person_Ext'", 
                     "'System'", "'System_Ext'", "'SystemDb'", "'SystemDb_Ext'", 
                     "'SystemQueue'", "'SystemQueue_Ext'", "'Container'", 
                     "'Container_Ext'", "'ContainerDb'", "'ContainerDb_Ext'", 
                     "'ContainerQueue'", "'ContainerQueue_Ext'", "'Component'", 
                     "'Component_Ext'", "'ComponentDb'", "'ComponentDb_Ext'", 
                     "'ComponentQueue'", "'ComponentQueue_Ext'", "'Enterprise_Boundary'", 
                     "'System_Boundary'", "'Container_Boundary'", "'Boundary'", 
                     "'Deployment_Node'", "'Node'", "'Node_L'", "'Node_R'", 
                     "'Rel'", "'BiRel'", "'Rel_Back'", "'Rel_U'", "'Rel_Up'", 
                     "'Rel_D'", "'Rel_Down'", "'Rel_L'", "'Rel_Left'", "'Rel_R'", 
                     "'Rel_Right'", "'RelIndex'", "<INVALID>", "<INVALID>", 
                     "'UpdateLayoutConfig'", "'AddElementTag'", "'AddRelTag'", 
                     "'title'", "'('", "')'", "'{'", "'}'", "','", "'='", 
                     "'$'" ]

    symbolicNames = [ "<INVALID>", "C4CONTEXT", "C4CONTAINER", "C4COMPONENT", 
                      "C4DYNAMIC", "C4DEPLOYMENT", "PERSON", "PERSON_EXT", 
                      "SYSTEM", "SYSTEM_EXT", "SYSTEM_DB", "SYSTEM_DB_EXT", 
                      "SYSTEM_QUEUE", "SYSTEM_QUEUE_EXT", "CONTAINER", "CONTAINER_EXT", 
                      "CONTAINER_DB", "CONTAINER_DB_EXT", "CONTAINER_QUEUE", 
                      "CONTAINER_QUEUE_EXT", "COMPONENT", "COMPONENT_EXT", 
                      "COMPONENT_DB", "COMPONENT_DB_EXT", "COMPONENT_QUEUE", 
                      "COMPONENT_QUEUE_EXT", "ENTERPRISE_BOUNDARY", "SYSTEM_BOUNDARY", 
                      "CONTAINER_BOUNDARY", "BOUNDARY", "DEPLOYMENT_NODE", 
                      "NODE", "NODE_L", "NODE_R", "REL", "BIREL", "REL_BACK", 
                      "REL_U", "REL_UP", "REL_D", "REL_DOWN", "REL_L", "REL_LEFT", 
                      "REL_R", "REL_RIGHT", "REL_INDEX", "UPDATE_ELEMENT_STYLE", 
                      "UPDATE_REL_STYLE", "UPDATE_LAYOUT_CONFIG", "ADD_ELEMENT_TAG", 
                      "ADD_REL_TAG", "TITLE", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "COMMA", "EQUALS", "DOLLAR", "INT", "QUOTED_STRING", 
                      "ID", "UNQUOTED_TEXT", "COMMENT", "NEWLINE", "WS", 
                      "TEXT_WS", "TEXT_REST" ]

    RULE_diagram = 0
    RULE_diagramType = 1
    RULE_statement = 2
    RULE_titleStmt = 3
    RULE_titleText = 4
    RULE_elementStmt = 5
    RULE_elementKw = 6
    RULE_boundaryBlock = 7
    RULE_boundaryKw = 8
    RULE_deployNodeBlock = 9
    RULE_deployNodeKw = 10
    RULE_relationStmt = 11
    RULE_relKw = 12
    RULE_styleStmt = 13
    RULE_layoutStmt = 14
    RULE_addTagStmt = 15
    RULE_argList = 16
    RULE_arg = 17
    RULE_namedArg = 18
    RULE_positionalArg = 19

    ruleNames =  [ "diagram", "diagramType", "statement", "titleStmt", "titleText", 
                   "elementStmt", "elementKw", "boundaryBlock", "boundaryKw", 
                   "deployNodeBlock", "deployNodeKw", "relationStmt", "relKw", 
                   "styleStmt", "layoutStmt", "addTagStmt", "argList", "arg", 
                   "namedArg", "positionalArg" ]

    EOF = Token.EOF
    C4CONTEXT=1
    C4CONTAINER=2
    C4COMPONENT=3
    C4DYNAMIC=4
    C4DEPLOYMENT=5
    PERSON=6
    PERSON_EXT=7
    SYSTEM=8
    SYSTEM_EXT=9
    SYSTEM_DB=10
    SYSTEM_DB_EXT=11
    SYSTEM_QUEUE=12
    SYSTEM_QUEUE_EXT=13
    CONTAINER=14
    CONTAINER_EXT=15
    CONTAINER_DB=16
    CONTAINER_DB_EXT=17
    CONTAINER_QUEUE=18
    CONTAINER_QUEUE_EXT=19
    COMPONENT=20
    COMPONENT_EXT=21
    COMPONENT_DB=22
    COMPONENT_DB_EXT=23
    COMPONENT_QUEUE=24
    COMPONENT_QUEUE_EXT=25
    ENTERPRISE_BOUNDARY=26
    SYSTEM_BOUNDARY=27
    CONTAINER_BOUNDARY=28
    BOUNDARY=29
    DEPLOYMENT_NODE=30
    NODE=31
    NODE_L=32
    NODE_R=33
    REL=34
    BIREL=35
    REL_BACK=36
    REL_U=37
    REL_UP=38
    REL_D=39
    REL_DOWN=40
    REL_L=41
    REL_LEFT=42
    REL_R=43
    REL_RIGHT=44
    REL_INDEX=45
    UPDATE_ELEMENT_STYLE=46
    UPDATE_REL_STYLE=47
    UPDATE_LAYOUT_CONFIG=48
    ADD_ELEMENT_TAG=49
    ADD_REL_TAG=50
    TITLE=51
    LPAREN=52
    RPAREN=53
    LBRACE=54
    RBRACE=55
    COMMA=56
    EQUALS=57
    DOLLAR=58
    INT=59
    QUOTED_STRING=60
    ID=61
    UNQUOTED_TEXT=62
    COMMENT=63
    NEWLINE=64
    WS=65
    TEXT_WS=66
    TEXT_REST=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def diagramType(self):
            return self.getTypedRuleContext(MermaidC4Parser.DiagramTypeContext,0)


        def EOF(self):
            return self.getToken(MermaidC4Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidC4Parser.NEWLINE)
            else:
                return self.getToken(MermaidC4Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidC4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(MermaidC4Parser.StatementContext,i)


        def getRuleIndex(self):
            return MermaidC4Parser.RULE_diagram

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = MermaidC4Parser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 40
                self.match(MermaidC4Parser.NEWLINE)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.diagramType()
            self.state = 48 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 47
                    self.match(MermaidC4Parser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 50 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 6)) & ~0x3f) == 0 and ((1 << (_la - 6)) & 432415932971745279) != 0):
                self.state = 52
                self.statement()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(MermaidC4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagramTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C4CONTEXT(self):
            return self.getToken(MermaidC4Parser.C4CONTEXT, 0)

        def C4CONTAINER(self):
            return self.getToken(MermaidC4Parser.C4CONTAINER, 0)

        def C4COMPONENT(self):
            return self.getToken(MermaidC4Parser.C4COMPONENT, 0)

        def C4DYNAMIC(self):
            return self.getToken(MermaidC4Parser.C4DYNAMIC, 0)

        def C4DEPLOYMENT(self):
            return self.getToken(MermaidC4Parser.C4DEPLOYMENT, 0)

        def getRuleIndex(self):
            return MermaidC4Parser.RULE_diagramType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagramType" ):
                return visitor.visitDiagramType(self)
            else:
                return visitor.visitChildren(self)




    def diagramType(self):

        localctx = MermaidC4Parser.DiagramTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_diagramType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titleStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.TitleStmtContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidC4Parser.NEWLINE)
            else:
                return self.getToken(MermaidC4Parser.NEWLINE, i)

        def elementStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.ElementStmtContext,0)


        def boundaryBlock(self):
            return self.getTypedRuleContext(MermaidC4Parser.BoundaryBlockContext,0)


        def deployNodeBlock(self):
            return self.getTypedRuleContext(MermaidC4Parser.DeployNodeBlockContext,0)


        def relationStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.RelationStmtContext,0)


        def styleStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.StyleStmtContext,0)


        def layoutStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.LayoutStmtContext,0)


        def addTagStmt(self):
            return self.getTypedRuleContext(MermaidC4Parser.AddTagStmtContext,0)


        def COMMENT(self):
            return self.getToken(MermaidC4Parser.COMMENT, 0)

        def getRuleIndex(self):
            return MermaidC4Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MermaidC4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.titleStmt()
                self.state = 64 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 63
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 66 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            elif token in [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.elementStmt()
                self.state = 70 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 69
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 72 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass
            elif token in [26, 27, 28, 29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.boundaryBlock()
                pass
            elif token in [30, 31, 32, 33]:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.deployNodeBlock()
                pass
            elif token in [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.relationStmt()
                self.state = 78 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 77
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 80 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass
            elif token in [46, 47]:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.styleStmt()
                self.state = 84 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 83
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 86 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.layoutStmt()
                self.state = 90 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 89
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 92 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            elif token in [49, 50]:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.addTagStmt()
                self.state = 96 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 95
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 98 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [63]:
                self.enterOuterAlt(localctx, 9)
                self.state = 100
                self.match(MermaidC4Parser.COMMENT)
                self.state = 102 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 101
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 104 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [64]:
                self.enterOuterAlt(localctx, 10)
                self.state = 107 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 106
                        self.match(MermaidC4Parser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 109 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(MermaidC4Parser.TITLE, 0)

        def titleText(self):
            return self.getTypedRuleContext(MermaidC4Parser.TitleTextContext,0)


        def getRuleIndex(self):
            return MermaidC4Parser.RULE_titleStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitleStmt" ):
                return visitor.visitTitleStmt(self)
            else:
                return visitor.visitChildren(self)




    def titleStmt(self):

        localctx = MermaidC4Parser.TitleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_titleStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MermaidC4Parser.TITLE)
            self.state = 114
            self.titleText()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleTextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(MermaidC4Parser.QUOTED_STRING, 0)

        def TEXT_REST(self):
            return self.getToken(MermaidC4Parser.TEXT_REST, 0)

        def getRuleIndex(self):
            return MermaidC4Parser.RULE_titleText

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitleText" ):
                return visitor.visitTitleText(self)
            else:
                return visitor.visitChildren(self)




    def titleText(self):
